# TradingAgents-CN

./: .dockerignore  .env.example  .env.production  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.ts-api  README.md  SESSION_START.md  ai_history.json  docker-compose.production.yml  docker-compose.yml  history.json  jobs.json  openapi.json  pyproject.toml  watchlist.json
.claude/: settings.local.json
app/: main.py
config/: models.json  pricing.json  settings.json
docker/: nginx.conf
docs/: AI_DEVELOPMENT_EXPERIENCE_REPORT.md  API_v2_DOCUMENTATION.md  ARCHITECTURE_RESTRUCTURE_PLAN.md  ARCHITECTURE_SUMMARY.md  ARCHITECTURE_v2.0_RUNNING_SYSTEM.md  DATA_FLOW_STRUCTURE.md  DOCKER_QUICK_REFERENCE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_VERSION_CONTROL.md  HANDOVER_REPORT_v1.0.4.md  HANDOVER_REPORT_v1.0.5.md  HANDOVER_REPORT_v1.0.6.md  HANDOVER_REPORT_v1.0.7.md  HANDOVER_REPORT_v1.0.8.md  HANDOVER_REPORT_v1.0.9.md  MIGRATION_GUIDE_v1_to_v2.md  MIGRATION_ROADMAP_V2.md  MODULE_COUPLING_ANALYSIS.md  MPLFINANCE_INTEGRATION_REPORT.md  NEXT_SESSION_TASKS.md  P0_OPTIMIZATION_COMPLETED.md  P0_P1_OPTIMIZATION_COMPLETED.md  PERFORMANCE_EVALUATION_v1.0.3.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PRODUCTION_DEPLOYMENT_GUIDE_v2.md  PRODUCTION_DEPLOYMENT_v2.0_READY.md  (+87 more)
rust_modules/backtest/: Cargo.toml  README.md
rust_modules/backtest/src/: lib.rs
rust_modules/financial/: Cargo.toml
rust_modules/financial/src/: lib.rs
rust_modules/strategy/: Cargo.toml  README.md
rust_modules/strategy/src/: lib.rs
(+347 files in other folders)
