[package]
name = "tacn_backtest"
version = "0.1.0"
edition = "2021"

[lib]
name = "tacn_backtest"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numpy = "0.23"
rayon = "1.10"
chrono = "0.4"
